# lua2wasm

./: .clang-format  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  GOAL.md  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: pages.yml
docs/: implementation-plan.md  language-features.md  lessons.md  stdlib.md
docs/design/: 19-global-env.md  20-lua-patterns.md  21-string-pack.md
examples/embed/: README.md  broker.mjs  build.sh  demo.mjs  engine.c
runtime/: format.mjs  host-bindings.mjs  host.mjs  index.html  lua2wasm-wasm.mjs  playground.html  prelude.wat
runtime/presets/: close.lua  counter.lua  fact.lua  files.lua  forloop.lua  hello.lua  manifest.json  oo.lua  pcall.lua  stack.lua  tables.lua
scripts/: build-wasm.sh  bundle-presets.mjs  check-presets.mjs  diff-fuzz.mjs  diff-test.sh  package-html.sh  smoke-official-tests.sh
src/: ast.c  ast.h  builtins.c  builtins.h  codegen.c  codegen.h  emscripten_entry.c  lexer.c  lexer.h  main.c  parser.c  parser.h  wasm_entry.c  wat2wasm.c  wat2wasm.h  wat2wasm_cli.c  wat_builder.c  wat_builder.h  xalloc.c  xalloc.h
src/freestanding/: alloc.c  baselib.c  dtoa_glue.c  fmt.c  host.h
src/freestanding/include/: ctype.h  errno.h  math.h  setjmp.h  stdio.h  stdlib.h  string.h
tests/: freestanding_fmt_test.c  test_codegen.c  test_e2e.sh  test_e2e_attributes.sh  test_e2e_binary_string.sh  test_e2e_bitwise.sh  test_e2e_builtins_basic.sh  test_e2e_call_typing.sh  test_e2e_compare_typecheck.sh  test_e2e_concat_typecheck.sh  test_e2e_const_upvalue.sh  test_e2e_default_tree_shake.sh  test_e2e_dispatch_captured_local.sh  test_e2e_error_position.sh  test_e2e_errors_catchable.sh  test_e2e_fdiv_floor.sh  test_e2e_for_step_zero.sh  test_e2e_gc_stubs.sh  test_e2e_global_attr_reject.sh  test_e2e_global_const_decl.sh  test_e2e_global_function_decl.sh  test_e2e_global_per_name_attr.sh  test_e2e_globals_G.sh  test_e2e_goto_interleaved.sh  test_e2e_goto_label.sh  test_e2e_goto_overlap.sh  test_e2e_hex_literal_wrap.sh  test_e2e_hex_literals.sh  test_e2e_implicit_globals.sh  test_e2e_io_file.sh  test_e2e_io_read.sh  test_e2e_io_read_full.sh  test_e2e_iterator.sh  test_e2e_leading_zero_int.sh  test_e2e_local_prefix_attr.sh  test_e2e_long_brackets.sh  test_e2e_math_atan_log.sh  test_e2e_math_deg_rad.sh  test_e2e_math_fillers.sh  test_e2e_math_random.sh  (+84 more)
tests/diff/: manifest.tsv
tests/diff/cases/: arith_err_msg.lua  builtin_arity.lua  close_early_exit.lua  collectgarbage_count.lua  compare_type_msg.lua  concat_invalid_value.lua  corners_lang.lua  corners_metatables.lua  corners_numbers.lua  corners_patterns.lua  corners_strings.lua  corners_tables.lua  debug_getinfo.lua  deep_recursion.lua  div_zero_int.lua  error_no_object.lua  find_coerce.lua  float_mod_sign.lua  float_neg_zero.lua  float_precision.lua  float_tostring_15g.lua  float_tostring_exp.lua  for_int_overflow.lua  for_num_float_type.lua  format_c_mask.lua  format_d_noninteger.lua  format_flag_validity.lua  format_g_smallexp.lua  format_hash_dot.lua  format_int_range.lua  format_p.lua  format_q_literals.lua  format_q_newline.lua  format_s_zeros.lua  format_str_coerce.lua  format_validation_extra.lua  format_validation_gaps.lua  getmetatable_string.lua  global_as_name.lua  gmatch_empty.lua  (+45 more)
tests/diff/expected/: arith_err_msg.expected  builtin_arity.expected  close_early_exit.expected  collectgarbage_count.expected  compare_type_msg.expected  concat_invalid_value.expected  corners_lang.expected  corners_metatables.expected  corners_numbers.expected  corners_patterns.expected  corners_strings.expected  corners_tables.expected  debug_getinfo.expected  deep_recursion.expected  div_zero_int.expected  error_no_object.expected  find_coerce.expected  float_mod_sign.expected  float_neg_zero.expected  float_precision.expected  float_tostring_15g.expected  float_tostring_exp.expected  for_num_float_type.expected  format_c_mask.expected  format_d_noninteger.expected  format_flag_validity.expected  format_g_smallexp.expected  format_hash_dot.expected  format_int_range.expected  format_p.expected  format_q_literals.expected  format_q_newline.expected  format_s_zeros.expected  format_str_coerce.expected  format_validation_extra.expected  format_validation_gaps.expected  getmetatable_string.expected  global_as_name.expected  gmatch_empty.expected  goto_into_scope.expected  (+38 more)
tests/e2e/: manifest.tsv  regen.sh  run.sh
tests/e2e/expected/: bad_arg_catchable.txt  bitwise.txt  builtins_basic.txt  close_decl_validate.txt  close_errors.txt  close_exits.txt  close_for_iter.txt  close_goto.txt  close_repeat_until.txt  cmp_typed.txt  compare_typecheck.txt  concat_typecheck.txt  direct_call_typed.txt  error_position.txt  errors_catchable.txt  fdiv_floor.txt  for_step_zero.txt  format_fixes.txt  gc_stubs.txt  global_const_decl.txt  globals_G.txt  gmatch_number.txt  goto_interleaved.txt  goto_label.txt  gsub_repl_number.txt  hex_literal_wrap.txt  hex_literals.txt  implicit_globals.txt  int_arg_coercion.txt  int_overflow_float.txt  iterator.txt  leading_zero_int.txt  list_no_caps.txt  (+88 more)
tests/expected/: call_typing.txt  varargs.txt
tests/fixtures/: attributes.lua  bad_arg_catchable.lua  binary_string.lua  bitwise.lua  builtins_basic.lua  call_typing.lua  close_decl_validate.lua  close_errors.lua  close_exits.lua  close_for_iter.lua  close_goto.lua  close_repeat_until.lua  cmp_typed.lua  compare_typecheck.lua  concat_typecheck.lua  direct_call_typed.lua  dispatch_captured_local.lua  embed_api.lua  error_position.lua  errors_catchable.lua  fdiv_floor.lua  for_step_zero.lua  format_fixes.lua  gc_stubs.lua  global_const_decl.lua  global_function_decl.lua  global_per_name_attr.lua  globals_G.lua  gmatch_number.lua  goto_interleaved.lua  goto_label.lua  goto_overlap.lua  gsub_repl_number.lua  hex_literal_wrap.lua  hex_literals.lua  implicit_globals.lua  int_arg_coercion.lua  int_overflow_float.lua  io_file.lua  io_read.lua  (+104 more)
tests/freestanding/: diff_native.mjs
tests/samples/: account.lua  bisect.lua  globals.lua  hello.lua  sieve.lua
tests/wat2wasm/: run.mjs
(+5 files in other folders)
